added tests and replaced dto's LocalDate to LocalDateTime